# advent_of_code

./: .gitignore  Cargo.toml  README.md  flake.nix
aoc2015/: Cargo.toml  xaoc.json
aoc2016/: Cargo.toml  xaoc.json
aoc2016/src/: assem.rs  lib.rs
aoc2017/: Cargo.toml  xaoc.json
aoc2018/: Cargo.toml  xaoc.json
aoc2018/src/: lib.rs
aoc2018/src/p21/: emit.rs  mod.rs
aoc2019/: Cargo.toml
aoc2019/src/: intcode.rs
aoc2020/: Cargo.toml  xaoc.json
aoc2021/: Cargo.toml  xaoc.json
aoc2022/: Cargo.toml  xaoc.json
aoc2023/: Cargo.toml
aoc2024/: Cargo.toml
aoc2025/: Cargo.toml
xaoc/: Cargo.toml  build.rs
xaoc/fixtures/: settings_good.html  settings_good_new_name.html  template.rs
xaoc/src/: auth.rs  lib.rs  puzzle.rs  runner.rs
