[package]
name = "aoc2015"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
fancy-regex = "0.10.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
pathfinding = "4.1.1"
rand = "0.8.5"
rayon = "1.6.1"
regex = "1.7.0"
serde_json = "1.0.91"
sscanf = "0.4.0"
colored = "2.0.0"
array2d = "0.3.0"
num-traits = "0.2.15"
tinyvec = "1.6.0"

[dependencies.xaoc]
path = "../xaoc"
