[package]
name = "aoc2017"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
bimap = "0.6.2"
hex = "0.4.3"
itertools = "0.10.5"
lazy_static = "1.4.0"
pathfinding = "4.1.1"
regex = "1.7.0"
serde_json = "1.0.91"
sscanf = "0.4.0"
z3 = "0.11.2"
colored = "2.0.0"
num-integer = "0.1.45"
array2d = "0.3.0"
primal-sieve = "0.3.5"
num-traits = "0.2.15"
tinyvec = "1.6.0"

[dependencies.xaoc]
path = "../xaoc"
