[package]
name = "aoc2018"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
hex = "0.4.3"
itertools = "0.10.5"
lazy_static = "1.4.0"
num = "0.4.0"
num-derive = "0.3.3"
pathfinding = "4.1.1"
rand = "0.8.5"
rayon = "1.6.1"
regex = "1.7.0"
serde_json = "1.0.91"
sscanf = "0.4.0"
strum = "0.24.1"
strum_macros = "0.24.3"
z3 = "0.11.2"
colored = "2.0.0"
num-integer = "0.1.45"
array2d = "0.3.0"
counter = "0.5.7"
num-traits = "0.2.15"
wasmtime = "3.0.1"
wasm-encoder = "0.20.0"
duplicate = "0.4.1"
tinyvec = "1.6.0"

[dependencies.xaoc]
path = "../xaoc"
