[package]
name = "aoc2019"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.68"
bimap = "0.6.2"
itertools = "0.10.5"
lazy_static = "1.4.0"
modinverse = "0.1.1"
num = "0.4.0"
num-derive = "0.3.3"
ordered-float = "3.4.0"
priority-queue = "1.3.0"
rand = "0.8.5"
regex = "1.7.0"
serde_json = "1.0.91"
vecmat = "0.7.8"
z3 = "0.11.2"
colored = "2.0.0"
num-integer = "0.1.45"
num-traits = "0.2.15"
tinyvec = "1.6.0"

[dependencies.xaoc]
path = "../xaoc"
