[package]
name = "aoc2020"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.68"
bimap = "0.6.2"
bitvec = "1.0.1"
itertools = "0.10.5"
lazy_static = "1.4.0"
regex = "1.7.0"
serde_json = "1.0.91"
strum = "0.24.1"
strum_macros = "0.24.3"
z3 = "0.11.2"
colored = "2.0.0"
tinyvec = "1.6.0"

[dependencies.xaoc]
path = "../xaoc"
