[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
bimap = "0.6.2"
itertools = "0.10.5"
lazy_static = "1.4.0"
ndarray = "0.15.6"
pathfinding = "4.1.1"
rand = "0.8.5"
rayon = "1.6.1"
regex = "1.7.0"
serde_json = "1.0.91"
colored = "2.0.0"
num-integer = "0.1.45"
num-traits = "0.2.15"
tinyvec = "1.6.0"

[dependencies.xaoc]
path = "../xaoc"

[features]
