[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
itertools = "0.10.5"
lazy_static = "1.4.0"
num = "0.4.0"
pathfinding = "4.1.1"
rand = "0.8.5"
regex = "1.7.0"
serde_json = "1.0.91"
sscanf = "0.4.0"
z3 = "0.11.2"
colored = "2.0.0"
num-integer = "0.1.45"
array2d = "0.3.0"
num-traits = "0.2.15"
petgraph = "0.6.2"
bitmaps = "3.2.0"
lru-cache = "0.1.2"
tinyvec = "1.6.0"
scanf = "1.2.1"

[dependencies.xaoc]
path = "../xaoc"

[dependencies.good_lp]
version = "1.3.2"
features = ["highs"]
default-features = false
