[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1.2"
anyhow = "1.0.75"
arrayvec = "0.7.4"
colored = "2.1.0"
indexmap = "2.1.0"
itertools = "0.12.0"
ndarray = "0.15.6"
pathfinding = "4.6.0"
rangemap = "1.4.0"
rayon = "1.8.0"
regex = "1.10.2"
sscanf = "0.4.1"
xaoc = { path = "../xaoc" }
