[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
overflow-checks = true

[dependencies]
aho-corasick = "1.1.3"
anyhow = "1.0.93"
array2d = "0.3.2"
arrayvec = "0.7.6"
bitvec = "1.0.1"
colored = "2.1.0"
hashbag = "0.1.12"
hashbrown = { version = "0.15.2", features = ["rayon"] }
indexmap = "2.7.0"
itertools = "0.13.0"
lazy_static = "1.5.0"
nalgebra = "0.33.2"
ndarray = "0.16.1"
pathfinding = "4.11.0"
petgraph = "0.6.5"
rand = "0.8.5"
rangemap = "1.5.1"
rayon = "1.10.0"
regex = "1.11.1"
sscanf = "0.4.2"
xaoc = { path = "../xaoc" }
z3 = "0.12.1"
z3-sys = "0.8.1"
