[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[profile.release]
overflow-checks = true

[dependencies]
aho-corasick = "1.1.4"
anyhow = "1.0.100"
array2d = "0.3.2"
arrayvec = "0.7.6"
bitvec = "1.0.1"
colored = "3.0.0"
count-digits = "0.5.1"
enum-tools = "0.5.5"
hashbag = "0.1.13"
hashbrown = { version = "0.16.1", features = ["rayon"] }
hex = "0.4.3"
indexmap = "2.12.1"
itertools = "0.14.0"
lazy_static = "1.5.0"
nalgebra = "0.34.1"
ndarray = "0.17.1"
num = "0.4.3"
num-derive = "0.4.2"
num-rational = "0.4.2"
num-traits = "0.2.19"
pathfinding = "4.14.0"
petgraph = "0.8.3"
rand = "0.9.2"
rangemap = "1.7.0"
rayon = "1.11.0"
regex = "1.12.2"
sha2 = "0.10.9"
sscanf = "0.4.4"
xaoc = { path = "../xaoc" }
z3 = "0.19.5"
z3-sys = "0.10.3"
