[package]
name = "xaoc"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
assert_fs = "1.0.13"
clap = { version = "4.4.10", features = ["derive"] }
colored = "2.0.4"
glob = "0.3.1"
html-escape = "0.2.13"
html2text = "0.6.0"
itertools = "0.12.0"
lazy_static = "1.4.0"
md-5 = { version = "0.10.6", features = ["md5-asm", "asm"] }
mockito = "1.2.0"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
toml = { version = "0.8.8", features = ["preserve_order"] }
uds = "0.4.1"
whoami = "1.4.1"
xdg = "2.5.2"
