[package]
name = "xaoc"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
anyhow = { version = "1.0.93", features = ["backtrace"] }
assert_fs = "1.1.2"
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.1.0"
glob = "0.3.1"
html-escape = "0.2.13"
html2text = "0.13.5"
itertools = "0.13.0"
lazy_static = "1.5.0"
md-5 = { version = "0.10.6", features = ["md5-asm", "asm"] }
mockito = "1.6.1"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
toml = { version = "0.8.19", features = ["preserve_order"] }
uds = "0.4.2"
whoami = "1.5.2"
xdg = "2.5.2"
